--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <title>Gerador de Senhas</title>
 </head>
 <body>
+    <section class="conteudo">
+        <div class="conteudo-titulo">
     <img src="unlock.svg" alt="cadeado">
     <h2 class="titulo-principal">Gerador de Senhas</h2>
     <h3 class="titulo-secundario">Gere uma senha aleatória e
         segura.
     </h3>
+</div>
+<div class ="conteudo-senha">
+    <label for="senha">Senha</label>
+    <input name="senha" type="text" id="campo-senha">
+</div>
+    <div class="parametro">
+        <h3 class="parametro-titulo">Personalize sua senha</h3>
+    </div>
 </body>
 </html>
