--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 <body>
     <section class="conteudo">
         <div class="conteudo-titulo">
-    <img src="unlock.svg" alt="cadeado">
-    <h2 class="titulo-principal">Gerador de Senhas</h2>
-    <h3 class="titulo-secundario">Gere uma senha aleatória e
-        segura.
-    </h3>
-</div>
-<div class ="conteudo-senha">
-    <label for="senha">Senha</label>
-    <input name="senha" type="text" id="campo-senha">
-</div>
-    <div class="parametro">
-        <h3 class="parametro-titulo">Personalize sua senha</h3>
-                <div class="parametro-coluna__senha">
+            <img src="unlock.svg">
+            <h2 class="titulo-principal">Gerador de Senhas</h2>
+            <h3 class="titulo-secundario">Gere uma senha aleatória e segura.</h3>
+        </div>
+        <div class="conteudo-senha">
+            <label for="senha">Senha</label>
+            <input name="senha" type="text" id="campo-senha" readonly>
+        </div>
+        <div class="parametro">
+            <h3 class="parametro-titulo">Personalize sua senha</h3>
+            <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
                     <div class="parametro-senha-botoes">
@@ -57,14 +55,12 @@
                         <p>Fraca</p>
                         <p>Média</p>
                         <p>Forte</p>
-
-                        ll
                     </div>
                     <p class="entropia"></p>
                 </div>
             </div>
         </div>
     </section>
-
+    <script src="main.js"></script>
 </body>
 </html>
